--- a/hm/index.html
+++ b/hm/index.html
@@ -9,20 +9,20 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f5f7fa;
+      background-color: #e0e0e0; /* Light gray background */
       color: #333;
     }
     .container {
       max-width: 900px;
       margin: 60px auto;
       padding: 40px;
-      background-color: #fff;
+      background-color: #ffffff;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
     }
     h1 {
       font-size: 2.8em;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
       text-align: center;
     }
     h2 {
@@ -33,20 +33,24 @@
       padding-bottom: 5px;
     }
     p {
-      font-size: 1em;
+      font-size: 1.05em;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
     ul {
       line-height: 1.6;
+      margin-left: 20px;
     }
     .links {
       text-align: center;
       margin-top: 20px;
+      margin-bottom: 30px;
     }
     .links a {
       margin: 0 12px;
       text-decoration: none;
       color: #0066cc;
+      font-weight: 500;
     }
     .links a:hover {
       text-decoration: underline;
@@ -60,23 +64,20 @@
 
     <div class="links">
       <a href="https://www.linkedin.com/in/hyesungpark/" target="_blank">LinkedIn</a>
-      <a href="mailto:hpark7@ggc.edu">Email</a>
       <a href="https://scholar.google.com/citations?user=DQ1i-6sAAAAJ&hl=en" target="_blank">Google Scholar</a>
     </div>
 
     <h2>Introduction</h2>
-   <p>
+    <p>
       I teach and conduct research at the intersection of computing education, trust and safety, and responsible AI.  
       My work focuses on inclusive, collaborative learning environments that foster critical digital literacy and problem-solving.
     </p>
 
     <h2>Courses I Teach</h2>
     <ul>
-      <li>Advanced Programming - Algorithm(ITEC 3150)</li>
-        <li>Intermediate Programming - OOP and Data Structure(ITEC 2150)</li>
-        <li>Programming Fundamental (ITEC 2140)</li>
-      
-       
+      <li><strong>Advanced Programming – Algorithms (ITEC 3150)</strong></li>
+      <li><strong>Intermediate Programming – OOP and Data Structures (ITEC 2150)</strong></li>
+      <li><strong>Programming Fundamentals (ITEC 2140)</strong></li>
     </ul>
 
     <h2>Project and Research Areas</h2>
@@ -88,8 +89,10 @@
     </ul>
 
     <h2>Contact</h2>
-    <p>Email: hpark7@ggc.edu<br>
-       Office Hours: By appointment</p>
+    <p>
+      Email: hpark7 <span style="font-style: italic;">at</span> ggc <span style="font-style: italic;">dot</span> edu<br /><br />
+      Office Hours: By appointment
+    </p>
   </div>
 </body>
 </html>
